// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authReducer AUTHENTICATE_FAILURE nulls currentUser and accessToken properties 1`] = `
Immutable.Map {
  accessToken: null,
  refreshing: false,
}
`;

exports[`authReducer REFRESH_TOKEN REFRESH_TOKEN_FAILURE sets refreshing to false 1`] = `
Immutable.Map {
  accessToken: null,
  refreshing: false,
}
`;

exports[`authReducer REFRESH_TOKEN REFRESH_TOKEN_REQUEST sets refreshing to true 1`] = `
Immutable.Map {
  accessToken: null,
  refreshing: true,
}
`;

exports[`authReducer REFRESH_TOKEN REFRESH_TOKEN_SUCCESS sets refreshing to false 1`] = `
Immutable.Map {
  accessToken: "token",
  refreshing: false,
}
`;
